--- a/myvueBulma/package.json
+++ b/myvueBulma/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "client",
+  "name": "myvuebulma",
   "version": "1.0.0",
   "description": "A Vue.js project",
-  "author": "Eduardo San Martin Morote <posva13@gmail.com>",
+  "author": "Elo <wanang.elodie@hotmail.fr>",
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
@@ -12,6 +12,8 @@
   "dependencies": {
     "axios": "^0.17.0",
     "buefy": "^0.5.4",
+    "install": "^0.10.1",
+    "npm": "^5.5.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
