last version updated

--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "myvuebulma",
+  "name": "client",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "Elo <wanang.elodie@hotmail.fr>",
