--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,8 @@ build/Release
 # Dependency directory
 # https://docs.npmjs.com/cli/shrinkwrap#caveats
 node_modules
+server/node_modules/
+client/node_modules/
 
 # Debug log from npm
 npm-debug.log
