--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "buefy": "^0.5.4",
     "dotenv": "^4.0.0",
     "install": "^0.10.1",
+    "moment": "^2.21.0",
     "npm": "^5.5.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
