--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "bcrypt": "^1.0.3",
     "body-parser": "~1.18.2",
+    "chalk": "^2.4.1",
     "cloudinary": "^1.9.1",
     "cors": "^2.8.4",
     "debug": "~3.1.0",
