--- a/package.json
+++ b/package.json
@@ -1,38 +1,38 @@
- {
-   "name": "auth-jwt-lab",
-   "version": "0.0.0",
-   "private": true,
-   "scripts": {
-     "start": "node ./bin/www",
-     "dev": "nodemon ./bin/www",
-     "seeds": "node ./bin/seed.js"
-   },
-   "dependencies": {
-     "bcrypt": "^1.0.3",
-     "body-parser": "~1.18.2",
-     "cloudinary": "^1.9.1",
-     "cors": "^2.8.4",
-     "debug": "~3.1.0",
-     "dotenv": "^4.0.0",
-     "express": "~4.16.2",
-     "express-history-api-fallback": "^2.2.1",
-     "jwt-simple": "^0.5.1",
-     "mongoose": "^4.12.3",
-     "morgan": "~1.9.0",
-     "multer": "^1.3.0",
-     "multer-storage-cloudinary": "^2.2.1",
-     "passport": "^0.4.0",
-     "passport-jwt": "^3.0.0",
-     "passport-local-mongoose": "^4.2.1",
-     "serve-favicon": "~2.4.5"
-   },
-   "engines": {
-     "node": ">= 4.0.0",
-     "npm": ">= 3.0.0"
-   },
-   "browserslist": [
-     "> 1%",
-     "last 2 versions",
-     "not ie <= 8"
-   ]
- }
+{
+  "name": "auth-jwt-lab",
+  "version": "0.0.0",
+  "private": true,
+  "scripts": {
+    "start": "node ./bin/www",
+    "dev": "nodemon ./bin/www",
+    "seeds": "node ./bin/seed.js"
+  },
+  "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "~1.18.2",
+    "cloudinary": "^1.9.1",
+    "cors": "^2.8.4",
+    "debug": "~3.1.0",
+    "dotenv": "^4.0.0",
+    "express": "~4.16.2",
+    "express-history-api-fallback": "^2.2.1",
+    "jwt-simple": "^0.5.1",
+    "mongoose": "^4.12.3",
+    "morgan": "~1.9.0",
+    "multer": "^1.3.0",
+    "multer-storage-cloudinary": "^2.2.1",
+    "passport": "^0.4.0",
+    "passport-jwt": "^3.0.0",
+    "passport-local-mongoose": "^4.2.1",
+    "serve-favicon": "~2.4.5"
+  },
+  "engines": {
+    "node": "8.6.0",
+    "npm": ">= 3.0.0"
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ]
+}
